--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,3 @@
 {
-    "python.formatting.provider": "black",
-    "python.pythonPath": "/home/dumbmachine/anaconda3/bin/python"
+    "python.formatting.provider": "black"
 }
